2002-08-22  Radek Doulik  <rodo@ximian.com>

	* htmltext.c: allow + in user name in mail addres and don't allow
	wwwblabla, ftpbla, ...

	* gtkhtml.c (drag_begin): select dragged object
	(dnd_link_set): no dnd in edit mode
	(dnd_link_unset): ditto

	* htmlengine.c (html_engine_stream_write): in case size == -1
	calculate length of buffer

2002-08-21  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (set_focus_child): test if object is not an frame
	before setting it as focus_object

2002-08-20  Radek Doulik  <rodo@ximian.com>

	* htmlprinter.c (alloc_font): scale width using new macro

	* htmlprinter.h (SCALE_GNOME_PRINT_FONT_TO_ENGINE): new macro for
	scaling font width

2002-08-19  Radek Doulik  <rodo@ximian.com>

	* htmlcluev.c (draw): fixed width and height of aligned objects
	drawing

2002-08-12  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (gtk_html_private_calc_scrollbars): bail if the widget
	isn't realized.

2002-08-09  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (html_engine_set_painter): recalculate the
	scrollbar extents now that we have changed the painter.  Fixes bug
	#28160

2002-08-07  Larry Ewing  <lewing@ximian.com>

	* keybindingsrc.emacs: bind C-/ to undo.

	* keybindingsrc.xemacs: bind C-/ to undo.

2002-08-06  Larry Ewing  <lewing@ximian.com>

	* gtkhtml-properties.h: make the colors strings.

	* gtkhtml-properties.c (gtk_html_class_properties_load): load the
	link_color keys.
	(gtk_html_class_properties_save): save the link_color keys.
	(gtk_html_class_properties_copy): copy the strings.
	(gtk_html_class_properties_new): string color properties.
	(gtk_html_class_properties_load): load the link_color props.
	(gtk_html_class_properties_update): test the color props for
	changes.

	* gtkhtml.c (init_properties_widget): use the new string color
	settings.
	(client_notify_widget): listen to the new keys.
	(client_notify_spell_widget): remove the old code.

	* gtkhtml-properties.h: add link color members.
