@@ -1,3 +1,9 @@
+2002-08-23  Radek Doulik  <rodo@ximian.com>
+
+	* htmlengine-edit-cut-and-paste.c (validate_tables): new function,
+	inserts new line in case we end with invalid flow layout after
+	delete
+
 2002-08-22  Radek Doulik  <rodo@ximian.com>
 
 	* htmltext.c: allow + in user name in mail addres and don't allow
